objects/Release__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Releases</relationshipLabel>
        <relationshipName>Releases</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Business_Analyst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Analyst</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Releases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cust_Road_Tune_Freq__c</fullName>
        <formula>Account__r.Road_Tunes_months__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is a simplification of the IMX contract data and is required for release reporting. It shouldn't be used for any other purpose. It refers to the account's contractual tuning requirements, not this particular release</inlineHelpText>
        <label>Cust Road Tune Freq</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cust_Sim_Tune_Freq__c</fullName>
        <formula>Account__r.Sim_tunes_months__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is a simplification of the IMX contract data and is required for release reporting. It shouldn't be used for any other purpose. It refers to the account's contractual tuning requirements, not this particular release</inlineHelpText>
        <label>Cust Sim Tune Freq</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Data_script__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Data/script</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Brief description of main purpose for the release and any Jira tickets that must be included</inlineHelpText>
        <label>Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Developer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Developer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Releases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Executable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Executable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Jira_Ticket__c</fullName>
        <inlineHelpText>Enter the OPSC Jira ticket number for upgrades and retunes. Enter n/a for implementation releases and patches</inlineHelpText>
        <label>Jira Ticket</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Optima_Customer_Code__c</fullName>
        <formula>Account__r.Optima_Customer_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Optima Customer Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patch__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>True if the customer already has a release of the same main version number (e.g. 1.2)</inlineHelpText>
        <label>Patch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Live</fullName>
                </value>
                <value>
                    <fullName>Net</fullName>
                </value>
                <value>
                    <fullName>Predict</fullName>
                </value>
                <value>
                    <fullName>Theatre</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Release_Date__c</fullName>
        <inlineHelpText>Date of delivery to customer</inlineHelpText>
        <label>Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Release_Legacy_ID__c</fullName>
        <label>Release Legacy ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revision__c</fullName>
        <inlineHelpText>The final (fourth) part of the version number. To be filled in when the release has been delivered</inlineHelpText>
        <label>Revision</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Road_Tune__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Road Tune</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sim_Tune__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sim Tune</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Projected</fullName>
                </value>
                <value>
                    <fullName>Tentative</fullName>
                </value>
                <value>
                    <fullName>Planned</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
                <value>
                    <fullName>Not for Production</fullName>
                </value>
                <value>
                    <fullName>In Production</fullName>
                </value>
                <value>
                    <fullName>Superseded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_Date__c</fullName>
        <inlineHelpText>Date of handover of the release for testing</inlineHelpText>
        <label>Test Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tester__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tester</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Releases2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X32_bit_Services__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Whether 32-bit services are included in the release</inlineHelpText>
        <label>32-bit Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X32_bit__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Whether a 32-bit executable is included in the release</inlineHelpText>
        <label>32-bit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X64_bit_Services__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Whether 64-bit services are included in the release</inlineHelpText>
        <label>64-bit Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X64_bit__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Whether a 64-bit executable is included in the release</inlineHelpText>
        <label>64-bit</label>
        <type>Checkbox</type>
    </fields>
    <label>Release</label>
    <listViews>
        <fullName>Optima_Current_and_Upcoming_Releases</fullName>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <columns>NAME</columns>
        <columns>Optima_Customer_Code__c</columns>
        <columns>Product__c</columns>
        <columns>Version__c</columns>
        <columns>Status__c</columns>
        <columns>Test_Date__c</columns>
        <columns>Release_Date__c</columns>
        <columns>Road_Tune__c</columns>
        <columns>Sim_Tune__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Tentative</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Planned</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Delivered</value>
        </filters>
        <label>Optima Current and Upcoming Releases</label>
        <sharedTo>
            <group>Optima_Support</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Optima_Production_Releases</fullName>
        <columns>NAME</columns>
        <columns>Optima_Customer_Code__c</columns>
        <columns>Product__c</columns>
        <columns>Version__c</columns>
        <columns>Status__c</columns>
        <columns>Release_Date__c</columns>
        <columns>Road_Tune__c</columns>
        <columns>Sim_Tune__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In Production</value>
        </filters>
        <label>Optima Production Releases</label>
        <sharedTo>
            <group>Optima_Support</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Optima_Projected_Releases</fullName>
        <columns>NAME</columns>
        <columns>Optima_Customer_Code__c</columns>
        <columns>Product__c</columns>
        <columns>Version__c</columns>
        <columns>Status__c</columns>
        <columns>Release_Date__c</columns>
        <columns>Road_Tune__c</columns>
        <columns>Sim_Tune__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Projected</value>
        </filters>
        <label>Optima Projected Releases</label>
        <sharedTo>
            <group>Optima_Support</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Optima_Support_Releases</fullName>
        <columns>NAME</columns>
        <columns>Optima_Customer_Code__c</columns>
        <columns>Product__c</columns>
        <columns>Version__c</columns>
        <columns>Status__c</columns>
        <columns>Release_Date__c</columns>
        <columns>Road_Tune__c</columns>
        <columns>Sim_Tune__c</columns>
        <filterScope>Everything</filterScope>
        <label>Optima Support Releases</label>
        <sharedTo>
            <group>Optima_Support</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>R-{00}</displayFormat>
        <label>Release Link</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Releases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Analyst_required_when_release_planned</fullName>
        <active>true</active>
        <errorConditionFormula>and( ISBLANK( Business_Analyst__c ), not or( ISPICKVAL( Status__c, "Projected" ) ,ISPICKVAL( Status__c, "Tentative" )))</errorConditionFormula>
        <errorDisplayField>Business_Analyst__c</errorDisplayField>
        <errorMessage>Business Analyst must be assigned unless status is Projected or Tentative</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Delivered_status_only_for_some_products</fullName>
        <active>true</active>
        <errorConditionFormula>and( ISPICKVAL( Status__c ,"Delivered") , not or ( ISPICKVAL( Product__c , "Live") , ISPICKVAL( Product__c , "NET")))</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Delivered status can only be used for Live or NET. For other products use In Production</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Developer_required_when_release_planned</fullName>
        <active>true</active>
        <errorConditionFormula>and( ISBLANK( Developer__c ), not or( ISPICKVAL( Status__c, "Projected" ) ,ISPICKVAL( Status__c, "Tentative" )))</errorConditionFormula>
        <errorDisplayField>Developer__c</errorDisplayField>
        <errorMessage>Developer must be assigned unless status is Projected or Tentative</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Executable_or_data_must_be_selected</fullName>
        <active>true</active>
        <errorConditionFormula>and(Executable__c = false, Data_script__c = false, not ISPICKVAL( Status__c ,"Projected"))</errorConditionFormula>
        <errorDisplayField>Executable__c</errorDisplayField>
        <errorMessage>At least one of Executable or Data/script must be selected for non-Projected releases</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Executable_releases_must_be_32_or_64bit</fullName>
        <active>true</active>
        <errorConditionFormula>and( Executable__c =true,X32_bit__c =false,X64_bit__c =false,not ISPICKVAL( Status__c ,"Projected"),not ISPICKVAL( Status__c ,"Tentative") )</errorConditionFormula>
        <errorDisplayField>X64_bit__c</errorDisplayField>
        <errorMessage>At least one of 32 or 64-bit must be selected for executable releases that are not Projected or Tentative</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Full_version_number_required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(FIND(".", Version__c, FIND(".", Version__c)+1) = 0, NOT ISPICKVAL(Status__c,"Projected"), NOT ISPICKVAL(Status__c,"Tentative"))</errorConditionFormula>
        <errorDisplayField>Version__c</errorDisplayField>
        <errorMessage>Full version number must be entered for releases that are not Projected or Tentative</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Jira_required_when_release_planned</fullName>
        <active>true</active>
        <errorConditionFormula>and( ISBLANK(Jira_Ticket__c), or( ISPICKVAL( Status__c, "Planned" ) ,ISPICKVAL( Status__c, "Tentative" )))</errorConditionFormula>
        <errorDisplayField>Jira_Ticket__c</errorDisplayField>
        <errorMessage>Jira ticket must be filled in if status is Tentative or Planned (enter n/a for implementation releases or patches)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Live_exe_rel_must_have_32_or_64bit_svcs</fullName>
        <active>true</active>
        <description>Live executable releases must have 32- or 64-bit services selected</description>
        <errorConditionFormula>and( Executable__c =true, ISPICKVAL(Product__c,"Live"),  X32_bit_Services__c =false, X64_bit_Services__c =false,not ISPICKVAL( Status__c ,"Projected"),not ISPICKVAL( Status__c ,"Tentative") )</errorConditionFormula>
        <errorDisplayField>X64_bit_Services__c</errorDisplayField>
        <errorMessage>At least one of 32 or 64-bit services must be selected for Live executable releases that are not Projected or Tentative</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Revision_required_when_delivered</fullName>
        <active>true</active>
        <errorConditionFormula>AND (ISBLANK(Revision__c), Executable__c, OR( ISPICKVAL( Status__c, "Delivered" ) ,ISPICKVAL( Status__c, "Not for Production"), ISPICKVAL( Status__c, "In Production"), ISPICKVAL( Status__c, "Superseded")))</errorConditionFormula>
        <errorDisplayField>Revision__c</errorDisplayField>
        <errorMessage>Revision must be filled in for executable releases which have been delivered</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Services_only_for_Live</fullName>
        <active>true</active>
        <description>32- and 64-bit services can only be selected for Live releases</description>
        <errorConditionFormula>and(not ISPICKVAL(Product__c,"Live"),  or(X32_bit_Services__c =true, X64_bit_Services__c =true))</errorConditionFormula>
        <errorDisplayField>X64_bit_Services__c</errorDisplayField>
        <errorMessage>32 and/or 64-bit services can only be selected for Live releases</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Test_and_release_dates_must_be_different</fullName>
        <active>true</active>
        <errorConditionFormula>and( Release_Date__c = Test_Date__c ,or( ISPICKVAL( Status__c , "Planned") , ISPICKVAL( Status__c , "Tentative") ))</errorConditionFormula>
        <errorDisplayField>Release_Date__c</errorDisplayField>
        <errorMessage>Test date and release date must not be the same for Planned or Tentative releases</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Test_date_must_be_before_release_date</fullName>
        <active>true</active>
        <errorConditionFormula>Test_Date__c &gt;  Release_Date__c</errorConditionFormula>
        <errorDisplayField>Test_Date__c</errorDisplayField>
        <errorMessage>Test date must be before release date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Tester_required_when_release_planned</fullName>
        <active>true</active>
        <errorConditionFormula>and( ISBLANK(Tester__c ), not or( ISPICKVAL( Status__c, "Projected" ) ,ISPICKVAL( Status__c, "Tentative" )))</errorConditionFormula>
        <errorDisplayField>Tester__c</errorDisplayField>
        <errorMessage>Tester must be assigned unless status is Projected or Tentative</errorMessage>
    </validationRules>
</CustomObject>